tests/pairs/ill-typed/bad-pairs-4.stella
language core;
extend with #pairs;

fn swap(p : {Nat, Bool}) -> {Nat, Bool} {
  return {p.1, false}
}

fn main(x : Nat) -> Nat {
  return swap(swap({0, x})).1
}
